crates/hwp-core/tests/snapshots/snapshot_tests__software_markdown.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: markdown
---
# HWP 문서



**버전**: 5.01.01.00



1. 개발 배경 및 필요성 : 최근 청소년 대상의 경제/금융 교육은 이론 중심으로 이루어지고 있으며, 학생들이 실제 투자 과정을 체험할 수 있는 환경이 부족한 상황입니다. 특히 중학교 단계에서는 주식이나 자산 관리 개념을 직접 경험하기 어려워, 경제 개념이 단순 암기 과목으로 인식되는 경우가 많습니다. 이러한 한계를 극복하기 위해, 모주(mozu)는 중학생이 직접 기업 정보를 분석하고 뉴스 기사를 바탕으로 투자 결정을 내리는 모의 주식 투자 학습 플랫폼으로 개발되었습니다. 이를 통해 학생들은 단순히 주가의 오르내림을 보는 것이 아니라, 뉴스/재무제표/사회 변화 요인 등 실제 경제 흐름을 이해하며 판단력을 기르는 경험을 하게 됩니다.

- 목    표 : 중학생들이 실제 주식 투자 과정을 체험하며 경제 개념과 투자 원리를 학습할 수 있도록 하는 교육형 모의 주식 투자 플랫폼 개발

- 작동 원리 : 교사(관리자)가 수업 세션를 개설하고 학생들은 기사와 기업 재무제표를 참고해 차수마다 투자를 진행한다. 시스템은 투자 금액/수익률/랭킹등을 실시간으로 계산한다. SSE기반으로 서버에서 클라이언트로 실시간 데이터를 전송하고 모든 투자 정보는 DB에 저장되어 교사와 학생이 즉시 확인 할 수 있다.

-

2. 개발 목적 : 주식 투자 원리를 게임처럼 직관적으로 학습할 수 있는 플랫폼 제공, 단순 투자 시뮬레이션이 아니라 뉴스/기사 기반 의사결정 훈련을 통해 사고력 향상, 교사 중심의 수업 운영 시스템으로 수업 효율성을 높이고 학생 참여도를 극대화

3. 유사 프로그램 및 차별점 : 기존 모의 주식앱들은 실거래 시세 기반, 교육용이 아니지만 모주(mozu)는 교사 학생 구조의 교육 중심으로 설계되었다. 타 주식 시뮬레이터들은 단순 수익 계산이 주로 이루어져 있지만 모주(mozu)는 뉴시 기사와 재무제표 기반으로 사용자가 판단형 투자 경험을 할 수 있다.

4. 작품 설계


| SW 내부 설계<br> |
|---|
| <br> 1. 교사 로그인 및 수업개설<br> - 수업 생성 서버에서 SSE채널 초기화<br> - 각 투자 라운드 별 기사/기업데이터 세팅<br> 2. 학생 로그인 및 투자 참여<br> - 1차 투자 진행 (기업 9곳 중 선택, 500만원 한도 내 투자 결정)<br> - 기업별 재무제표, 주요 기사 확인<br> - 교사가 기사 공개 시 SSE를 통해 실시간 브로드 캐스트<br> 3. 1차 투자 마감 -> 신문기사 공개<br> - 새로운 기사 공개 시 학생들은 정보 분석 후 2차 투자 진행<br> - 매수/매도 요청 서버에서 SSE를 통해 반영 결과 실시간 전송<br> 4. 2차 투자 및 결과 조회<br> - 학생별 투자 종목, 보유 수량, 평가 금액, 수익률 등 확인 가능<br> - 투자 후 수정 불가 (1포인트 내 . 회 매수/매도 제한)<br> - 잔액 없을 시 . ㅐ수 불가, 매도 후 재투자 가능<br> 5. 투자 종료 및 결과 발표<br> - 투자 종료 서버가 최종 수익률 계산 후 랭킹 발표<br> - 교사 페이지에서 전체 결과를 시각화 (그래프, 수익률 차트 등)<br>  시스템 구성도<br> - TB_ADMIN: 관리자(교사) 계정 관리<br> - TB_CLASS: 수업 세션 및 라운드 정보<br> - TB_ART: 뉴스 기사 테이블<br> - TB_ITEM: 투자 가능한 종목 정보 (기업명, 재무 정보, 가격 등)<br> - TB_CLASS_ITEM: 클래스별 투자 종목 연결<br> - TB_ITEM_ORDER: 매수/매도 내역(거래 시간 금액 수량등)<br> - TB_CLASS_ITEM: 학생별 참여 그룹 정보<br> - TB_CLASS_ART: 각 수업에서 공개된 기사 기록<br>                                                                                                                                       - HOLD_ITEM: 현재 보유 주식 현황, 평가 금액, 수익률 저장<br>   |


5. [출처표기] <예시 1> 참고문헌

[출처표기] <예시 2> 이미지 및 음원 등에 저작물에 대한 출처 표기


| 번호<br> | 자료형태<br> | 파일명<br> | 자료 설명(키워드)<br> | 비고(출처 등)<br> |
|---|---|---|---|---|
| 1<br> | ERD<br> | <br> | 모주 서비스DB 구조 요약<br> | ERD CLOUD<br> |
| 2<br> | API 명세<br> | <br> | 모주 서비스 api에 대한 설명<br> | Postman<br> |
| 3<br> | 사이트<br> | <br> | 모주 서비스 개발 깃허브 올가니제이션<br> | GitHub<br> |
