crates/hwp-core/tests/snapshots/snapshot_tests__software_page_0001.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: page_html
---
<!DOCTYPE html>
<html><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><head><title></title><meta http-equiv="content-type" content="text/html; charset=utf-8"><link rel="stylesheet" type="text/css" href="software_style.css"></head><body><div class="hpa" style="width:210mm;height:296.99mm;"><div class="hcD" style="left:20mm;top:15mm;"><div class="hcI"><div class="hls ps22" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:170.00mm;"></div></div></div><div class="hcD" style="left:20mm;top:25mm;"><div class="hcI"><div class="hls ps0" style="line-height:70.69mm;white-space:nowrap;left:0.00mm;top:0.00mm;height:70.69mm;width:170.00mm;"><div class="htb" style="left:0.5mm;width:165.45mm;top:0.5mm;height:70.69mm;display:inline-block;position:relative;vertical-align:middle;"><svg class="hs" viewBox="-2.5 -2.5 170.45 75.69" style="left:-2.5mm;top:-2.5mm;width:170.45mm;height:75.69mm;"><defs></defs><path d="M0,0 L0,69.69" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.4;"></path><path d="M11.65,12.98 L11.65,69.69" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.4;"></path><path d="M49.85,24.06 L49.85,56.72" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M88.05,12.98 L88.05,56.72" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.4;"></path><path d="M126.26,12.98 L126.26,56.72" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M164.46,0 L164.46,69.69" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.4;"></path><path d="M-0.2,0 L164.66,0" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.4;"></path><path d="M-0.2,12.98 L164.66,12.98" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.4;"></path><path d="M-0.2,24.06 L164.66,24.06" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.4;"></path><path d="M11.59,32.23 L164.52,32.23" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M11.59,40.39 L164.52,40.39" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M11.59,48.55 L164.52,48.55" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path><path d="M-0.2,56.72 L164.66,56.72" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.4;"></path><path d="M-0.2,69.69 L164.66,69.69" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.4;"></path></svg><div class="hce" style="left:0mm;top:0mm;width:164.46mm;height:12.98mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:4mm;"><div class="hls ps22" style="line-height:3.97mm;white-space:nowrap;left:0.00mm;top:-0.66mm;height:5.29mm;width:163.46mm;"><span class="hrt cs18">2025 Software Wave DSM 공모 참가신청서</span></div></div></div></div><div class="hce" style="left:0mm;top:12.98mm;width:11.65mm;height:11.08mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:0.48mm;"><div class="hls ps23" style="line-height:2.91mm;white-space:nowrap;left:0.00mm;top:-0.48mm;height:3.88mm;width:10.65mm;"><span class="hrt cs12">참가부</span></div><div class="hls ps23" style="line-height:2.91mm;white-space:nowrap;left:0.00mm;top:5.72mm;height:3.88mm;width:10.65mm;"><span class="hrt cs12">문</span></div></div></div></div><div class="hce" style="left:11.65mm;top:12.98mm;width:76.4mm;height:11.08mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:3.59mm;"><div class="hls ps0" style="line-height:2.91mm;white-space:nowrap;left:0.00mm;top:-0.48mm;height:3.88mm;width:75.41mm;"><span class="hrt cs13">&nbsp;□ 전공동아리 &nbsp;□ 팀 &nbsp;&nbsp;□ 개인</span></div></div></div></div><div class="hce" style="left:88.05mm;top:12.98mm;width:38.2mm;height:11.08mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:3.59mm;"><div class="hls ps23" style="line-height:2.91mm;white-space:nowrap;left:0.00mm;top:-0.48mm;height:3.88mm;width:37.21mm;"><span class="hrt cs17">교사</span></div></div></div></div><div class="hce" style="left:126.26mm;top:12.98mm;width:38.2mm;height:11.08mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:3.59mm;"><div class="hls ps0" style="line-height:2.91mm;white-space:nowrap;left:0.00mm;top:-0.48mm;height:3.88mm;width:37.21mm;"><span class="hrt cs13">이동욱</span></div></div></div></div><div class="hce" style="left:0mm;top:24.06mm;width:11.65mm;height:32.65mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:8.16mm;"><div class="hls ps24" style="line-height:2.91mm;white-space:nowrap;left:0.00mm;top:-0.48mm;height:3.88mm;width:10.65mm;"><span class="hrt cs12">참</span></div><div class="hls ps24" style="line-height:2.91mm;white-space:nowrap;left:0.00mm;top:5.72mm;height:3.88mm;width:10.65mm;"><span class="hrt cs12">가</span></div><div class="hls ps24" style="line-height:2.91mm;white-space:nowrap;left:0.00mm;top:11.93mm;height:3.88mm;width:10.65mm;"><span class="hrt cs12">자</span></div></div></div></div><div class="hce" style="left:11.65mm;top:24.06mm;width:38.2mm;height:8.16mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:2.39mm;"><div class="hls ps24" style="line-height:2.38mm;white-space:nowrap;left:0.00mm;top:-0.40mm;height:3.18mm;width:37.21mm;"><span class="hrt cs14">이름</span></div></div></div></div><div class="hce" style="left:49.85mm;top:24.06mm;width:38.2mm;height:8.16mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:2.39mm;"><div class="hls ps24" style="line-height:2.38mm;white-space:nowrap;left:0.00mm;top:-0.40mm;height:3.18mm;width:37.21mm;"><span class="hrt cs15">학번</span></div></div></div></div><div class="hce" style="left:88.05mm;top:24.06mm;width:38.2mm;height:8.16mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:2.39mm;"><div class="hls ps24" style="line-height:2.38mm;white-space:nowrap;left:0.00mm;top:-0.40mm;height:3.18mm;width:37.21mm;"><span class="hrt cs14">이름</span></div></div></div></div><div class="hce" style="left:126.26mm;top:24.06mm;width:38.2mm;height:8.16mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:2.39mm;"><div class="hls ps24" style="line-height:2.38mm;white-space:nowrap;left:0.00mm;top:-0.40mm;height:3.18mm;width:37.21mm;"><span class="hrt cs15">학번</span></div></div></div></div><div class="hce" style="left:11.65mm;top:32.23mm;width:38.2mm;height:8.16mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:2.39mm;"><div class="hls ps24" style="line-height:2.38mm;white-space:nowrap;left:0.00mm;top:-0.40mm;height:3.18mm;width:37.21mm;"><span class="hrt cs14">박태수</span></div></div></div></div><div class="hce" style="left:49.85mm;top:32.23mm;width:38.2mm;height:8.16mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:1.99mm;"><div class="hls ps1" style="line-height:3.18mm;white-space:nowrap;left:0.00mm;top:-0.53mm;height:4.23mm;width:37.21mm;"><span class="hrt cs0">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2107</span></div></div></div></div><div class="hce" style="left:88.05mm;top:32.23mm;width:38.2mm;height:8.16mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:2.39mm;"><div class="hls ps24" style="line-height:2.38mm;white-space:nowrap;left:0.00mm;top:-0.40mm;height:3.18mm;width:37.21mm;"><span class="hrt cs15">지도현</span></div></div></div></div><div class="hce" style="left:126.26mm;top:32.23mm;width:38.2mm;height:8.16mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:1.99mm;"><div class="hls ps1" style="line-height:3.18mm;white-space:nowrap;left:0.00mm;top:-0.53mm;height:4.23mm;width:37.21mm;"><span class="hrt cs0">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2414</span></div></div></div></div><div class="hce" style="left:11.65mm;top:40.39mm;width:38.2mm;height:8.16mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:2.39mm;"><div class="hls ps24" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:37.21mm;"></div></div></div></div><div class="hce" style="left:49.85mm;top:40.39mm;width:38.2mm;height:8.16mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:2.39mm;"><div class="hls ps24" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:37.21mm;"></div></div></div></div><div class="hce" style="left:88.05mm;top:40.39mm;width:38.2mm;height:8.16mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:2.39mm;"><div class="hls ps24" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:37.21mm;"></div></div></div></div><div class="hce" style="left:126.26mm;top:40.39mm;width:38.2mm;height:8.16mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:2.39mm;"><div class="hls ps24" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:37.21mm;"></div></div></div></div><div class="hce" style="left:11.65mm;top:48.55mm;width:38.2mm;height:8.16mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:2.39mm;"><div class="hls ps24" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:37.21mm;"></div></div></div></div><div class="hce" style="left:49.85mm;top:48.55mm;width:38.2mm;height:8.16mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:2.39mm;"><div class="hls ps24" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:37.21mm;"></div></div></div></div><div class="hce" style="left:88.05mm;top:48.55mm;width:38.2mm;height:8.16mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:2.39mm;"><div class="hls ps24" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:37.21mm;"></div></div></div></div><div class="hce" style="left:126.26mm;top:48.55mm;width:38.2mm;height:8.16mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:2.39mm;"><div class="hls ps24" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:37.21mm;"></div></div></div></div><div class="hce" style="left:0mm;top:56.72mm;width:11.65mm;height:12.98mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:4.53mm;"><div class="hls ps24" style="line-height:2.91mm;white-space:nowrap;left:0.00mm;top:-0.48mm;height:3.88mm;width:10.65mm;"><span class="hrt cs21">주제</span></div></div></div></div><div class="hce" style="left:11.65mm;top:56.72mm;width:152.81mm;height:12.98mm;"><div class="hcD" style="left:0.5mm;top:0.5mm;"><div class="hcI" style="top:4mm;"><div class="hls ps22" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:-0.18mm;height:3.53mm;width:151.81mm;"></div></div></div></div></div></div><div class="hls ps31" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:72.50mm;height:3.53mm;width:170.00mm;"></div><div class="hls ps2" style="line-height:2.65mm;white-space:nowrap;left:0.00mm;top:77.88mm;height:3.53mm;width:170.00mm;"><span class="hrt cs22">1. 개발 배경 및 필요성 : 최근 청소년 대상의 경제/금융 교육은 이론 중심으로 이루어지고 있으며, 학생들이 실제 투자 과정을 체험할&nbsp;</span></div><div class="hls ps2" style="line-height:2.65mm;white-space:nowrap;left:0.00mm;top:83.53mm;height:3.53mm;width:170.00mm;"><span class="hrt cs22">수 있는 환경이 부족한 상황입니다. 특히 중학교 단계에서는 주식이나 자산 관리 개념을 직접 경험하기 어려워, 경제 개념이 단순 암기&nbsp;</span></div><div class="hls ps2" style="line-height:2.65mm;white-space:nowrap;left:0.00mm;top:89.17mm;height:3.53mm;width:170.00mm;"><span class="hrt cs22">과목으로 인식되는 경우가 많습니다. 이러한 한계를 극복하기 위해, 모주(mozu)는 중학생이 직접 기업 정보를 분석하고 뉴스 기사를&nbsp;</span></div><div class="hls ps2" style="line-height:2.65mm;white-space:nowrap;left:0.00mm;top:94.82mm;height:3.53mm;width:170.00mm;"><span class="hrt cs22">바탕으로 투자 결정을 내리는 모의 주식 투자 학습 플랫폼으로 개발되었습니다. 이를 통해 학생들은 단순히 주가의 오르내림을 보는 것</span></div><div class="hls ps2" style="line-height:2.65mm;white-space:nowrap;left:0.00mm;top:100.46mm;height:3.53mm;width:170.00mm;"><span class="hrt cs22">이 아니라, 뉴스/재무제표/사회 변화 요인 등 실제 경제 흐름을 이해하며 판단력을 기르는 경험을 하게 됩니다.</span></div><div class="hls ps2" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:106.37mm;height:3.53mm;width:170.00mm;"></div><div class="hls ps2" style="line-height:2.65mm;white-space:nowrap;left:0.00mm;top:111.75mm;height:3.53mm;width:170.00mm;"><span class="hrt cs22">&nbsp;&nbsp;- 목 &nbsp;&nbsp;&nbsp;표 : 중학생들이 실제 주식 투자 과정을 체험하며 경제 개념과 투자 원리를 학습할 수 있도록 하는 교육형 모의 주식 투자 플랫폼 개</span></div><div class="hls ps2" style="line-height:2.65mm;white-space:nowrap;left:0.00mm;top:117.39mm;height:3.53mm;width:170.00mm;"><span class="hrt cs22">발</span></div><div class="hls ps28" style="line-height:2.65mm;white-space:nowrap;left:0.00mm;top:123.04mm;height:3.53mm;width:170.00mm;"><span class="hrt cs22">&nbsp;&nbsp;- 작동 원리 : 교사(관리자)가 수업 세션를 개설하고 학생들은 기사와 기업 재무제표를 참고해 차수마다 투자를 진행한다. 시스템은&nbsp;</span></div><div class="hls ps28" style="line-height:2.65mm;white-space:nowrap;left:0.00mm;top:128.68mm;height:3.53mm;width:170.00mm;padding-left:33.42mm;"><span class="hrt cs22">투자 금액/수익률/랭킹등을 실시간으로 계산한다. SSE기반으로 서버에서 클라이언트로 실시간 데이터를&nbsp;</span></div><div class="hls ps28" style="line-height:2.65mm;white-space:nowrap;left:0.00mm;top:134.33mm;height:3.53mm;width:170.00mm;padding-left:33.42mm;"><span class="hrt cs22">전송하고 모든 투자 정보는 DB에 저장되어 교사와 학생이 즉시 확인 할 수 있다.</span></div><div class="hls ps28" style="line-height:2.65mm;white-space:nowrap;left:0.00mm;top:139.97mm;height:3.53mm;width:170.00mm;"><span class="hrt cs22">	-&nbsp;</span></div><div class="hls ps2" style="line-height:2.65mm;white-space:nowrap;left:0.00mm;top:145.62mm;height:3.53mm;width:170.00mm;"><span class="hrt cs22">&nbsp;2. 개발 목적 : 주식 투자 원리를 게임처럼 직관적으로 학습할 수 있는 플랫폼 제공, 단순 투자 시뮬레이션이 아니라 뉴스/기사 기반 의</span></div><div class="hls ps2" style="line-height:2.65mm;white-space:nowrap;left:0.00mm;top:151.26mm;height:3.53mm;width:170.00mm;"><span class="hrt cs22">사결정 훈련을 통해 사고력 향상, 교사 중심의 수업 운영 시스템으로 수업 효율성을 높이고 학생 참여도를 극대화</span></div><div class="hls ps2" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:157.17mm;height:3.53mm;width:170.00mm;"></div><div class="hls ps2" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:162.81mm;height:3.53mm;width:170.00mm;"></div><div class="hls ps2" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:168.45mm;height:3.53mm;width:170.00mm;"></div><div class="hls ps29" style="line-height:2.65mm;white-space:nowrap;left:0.00mm;top:173.84mm;height:3.53mm;width:170.00mm;"><span class="hrt cs22">&nbsp;3. 유사 프로그램 및 차별점 : 기존 모의 주식앱들은 실거래 시세 기반, 교육용이 아니지만 모주(mozu)는 교사 학생 구조의 교육 중심으</span></div><div class="hls ps29" style="line-height:2.65mm;white-space:nowrap;left:0.00mm;top:179.48mm;height:3.53mm;width:170.00mm;padding-left:13.47mm;"><span class="hrt cs22">로 설계되었다. 타 주식 시뮬레이터들은 단순 수익 계산이 주로 이루어져 있지만 모주(mozu)는 뉴시 기사와 재무제표 기반</span></div><div class="hls ps29" style="line-height:2.65mm;white-space:nowrap;left:0.00mm;top:185.13mm;height:3.53mm;width:170.00mm;padding-left:13.47mm;"><span class="hrt cs22">으로 사용자가 판단형 투자 경험을 할 수 있다.</span></div><div class="hls ps30" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:191.03mm;height:3.53mm;width:170.00mm;"></div><div class="hls ps30" style="line-height:2.79mm;white-space:nowrap;left:0.00mm;top:196.68mm;height:3.53mm;width:170.00mm;"></div><div class="hls ps27" style="line-height:2.65mm;white-space:nowrap;left:0.00mm;top:202.06mm;height:3.53mm;width:170.00mm;"><span class="hrt cs23">4. 작품 설계</span></div></div></div><div class="hsR" style="top:40.48mm;left:62.18mm;width:3.18mm;height:3.7mm;"><svg class="hs" viewBox="-0.15 -0.15 3.48 4" style="left:-0.15mm;top:-0.15mm;width:3.48mm;height:4mm;"><path d="M0,0 L3.18,3.7" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path></svg></div><div class="hsR" style="top:39.95mm;left:65.09mm;width:4.23mm;height:3.97mm;"><svg class="hs" viewBox="-0.15 -0.15 4.53 4.27" style="left:-0.15mm;top:-0.15mm;width:4.53mm;height:4.27mm;"><path d="M0,3.97 L4.23,0" style="stroke:#000000;stroke-linecap:butt;stroke-width:0.12;"></path></svg></div></div></body></html>
